# 7005_A3

./: .gitignore
source/client/: CMakeLists.txt
source/client/include/: client.h
source/client/src/: client.c  main.c
source/server/: CMakeLists.txt
source/server/include/: server.h
source/server/src/: main.c  server.c
